---------------------------------------------------------------------------
Version 0.9.4 (RGer), around 2005-07-20
- the "exiting on signal..." message still had the "syslogd" name in 
  it. Changed this to "rsyslogd", as we do not have a large user base
  yet, this should pose no problem.
- fixed "the semiconlon" bug. rsyslogd dumped core if a write-db action
  was specified but no semicolon was given after the password (an empty
  template was ok, but the semicolon needed to be present).
---------------------------------------------------------------------------
Version 0.9.3 (RGer), 2005-07-19
- fixed a bug in the message parser. In June, the RFC 3164 timestamp
  was not correctly parsed (yes, only in June and some other months,
  see the code comment to learn why...)
- added the ability to specify the destination port when forwarding
  syslog messages (both for TCP and UDP)
- added an very experimental TCP sender (activated by
  @@machine:port in config). This is not yet for production use. If
  the receiver is not alive, rsyslogd will wait quite some time until
  the connection request times out, which most probably leads to
  loss of incoming messages.

---------------------------------------------------------------------------
Version 0.9.2 (RGer), around 2005-07-06
- I intended to change the maxsupported message size to 32k to
  support IHE - but given the memory inefficiency in the usual use
  cases, I have not done this. I have, however, included very
  specific instructions on how to do this in the source code. I have
  also done some testing with 32k messages, so you can change the
  max size without taking too much risk.
- added a syslog/tcp receiver; we now can receive messages via
  plain tcp, but we can still send only via UDP. The syslog/tcp
  receiver is the primary enhancement of this release.
- slightly changed some error messages that contained a spurios \n at
  the end of the line (which gives empty lines in your log...)
